raviprojectnew/kubernates/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
  namespace: febe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
      - name: springboot
        image: ravi8881/Luv-ravisuborg1-ravidevenv-ravigraphid2-graph:10.0.0
        ports:
        - containerPort: 8081
