raviprojectnew/kubernates/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: febe
spec:
  selector:
    app: springboot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
